Fixes alignment and adds header config option

--- a/MMM-HVV.css
+++ b/MMM-HVV.css
@@ -7,6 +7,8 @@
   max-width: 100%;
   max-height: 100%;
   padding-right: 1em;
+  text-align: center;
+  vertical-align: middle;
 }
 
 #HVV .grayscale {
